# agentcys-platform

./: .gitignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
agentcys_platform/: __init__.py  config.py
agentcys_platform/credentials/: __init__.py  base.py  sa_key.py
agentcys_platform/models/: blueprint.py  credential.py  deployment.py  project.py  run.py  tenant.py
agentcys_platform/security/: audit.py  hmac_signer.py  http_security.py  tenant_guard.py
agentcys_platform/store/: firestore.py
api/: __init__.py  main.py
api/middleware/: __init__.py  auth.py
api/routes/: __init__.py  blueprints.py  credentials.py  deployments.py  projects.py  tenants.py
api/services/: __init__.py  blueprint_service.py  credential_service.py  deployment_service.py  project_service.py  tenant_service.py
blueprints/cloud-run-service/: README.md  input_schema.json  main.tf  output_schema.json  outputs.tf  variables.tf
blueprints/cloud-storage-bucket/: README.md  input_schema.json  main.tf  output_schema.json  outputs.tf  variables.tf
blueprints/firestore-database/: README.md  input_schema.json  main.tf  output_schema.json  outputs.tf  variables.tf  versions.tf
blueprints/pubsub-topic/: README.md  input_schema.json  main.tf  output_schema.json  (+2 more)
docs/: progress.md
frontend/: index.html  tailwind.config.cjs
platform/: __init__.py
scripts/: seed_blueprints.py
tests/: conftest.py
worker/: __init__.py  config.py  handler.py  main.py
(+43 files in other folders)
